--- a/css/game.css
+++ b/css/game.css
@@ -1,3 +1,28 @@
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('../one-piece/anime-one-piece1.png');
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 20px 50px;
+  }
+  
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.8);
+    font-size: 1.2em;
+    width: 100%;
+    max-width: 800px;
+    padding: 30px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+  }
+
 .grid {
     display: grid;
     grid-template-columns:repeat(5, 1fr);
@@ -24,19 +49,26 @@
     position: absolute;
     background-size: cover;
     background-position: center;
+    border: 2px solid pink;
+    border-radius: 5px;
+    transition: all 400ms ease;
 }
 
 .front {
-    background-color: white;
     transform: rotateY(180deg);
-    
 }
 
 .back {
-    background-image: url('../one-piece/zoroPronto1.png');
+    background-image: url('../one-piece/cardOPPronto.png');
     backface-visibility: hidden;
 }
 
-.card:hover {
+.reveal-card {
     transform: rotateY(180deg);
 }
+
+.disabled-card {
+    filter: saturate(0);
+    opacity: 0.5;
+}
+
